# CodingChallengeForWI

./: CMakeLists.txt  Output.txt  README.txt  TestFile.csv  TheChallenge.txt  Thinking.txt
source/: CMakeLists.txt  main.cpp
source/proj/: CMakeLists.txt  DateValidator.cpp  DateValidator.h  EventExtractor.cpp  EventExtractor.h  EventType.h  IDateValidator.h  IReporter.h  ImportantEvent.cpp  ImportantEvent.h  MaxLivesFinder.cpp  MaxLivesFinder.h  MaxLivesResult.h  Parser.cpp  Parser.h  PeopleData.cpp  PeopleData.h  PeopleReporter.cpp  PeopleReporter.h  PersonID.h  Runner.cpp  Runner.h  SimpleYearReporter.cpp  SimpleYearReporter.h
source/tests/projtests/: CMakeLists.txt  TestDateValidator.cpp  TestEventExtractor.cpp  TestImportantEvent.cpp  TestMain.cpp  TestMaxLivesFinder.cpp  TestParser.cpp  TestPeopleReporter.cpp  TestSimpleYearReporter.cpp
source/tests/projtests/Mocks/: CMakeLists.txt  DateValidatorMock.cpp  DateValidatorMock.h
